--- a/examples/integrations/docker-compose/compose.yaml
+++ b/examples/integrations/docker-compose/compose.yaml
@@ -45,7 +45,7 @@ services:
 
   server:
     image: 'winvoice/server:${WINVOICE_SERVER_TAG:-v0.6.2}'
-    build: '.'
+    build: '../docker'
 
     depends_on:
       db: {condition: 'service_healthy'}
