--- a/examples/integrations/kubernetes/server/secrets/cors.yaml
+++ b/examples/integrations/kubernetes/server/secrets/cors.yaml
@@ -11,5 +11,5 @@ metadata: &metadata
   name: 'winvoice.backend.cors'
 type: 'Opaque' # see https://kubernetes.io/docs/concepts/configuration/secret/#secret-types
 data:
-  allow: 'aHR0cHM6Ly8qCg=='
+  allow.txt: 'aHR0cHM6Ly8qCg=='
 ---
