--- a/kubernetes/server/deployment.yaml
+++ b/kubernetes/server/deployment.yaml
@@ -14,14 +14,11 @@ spec:
   selector:
     matchLabels: *labels
   strategy:
-    rollingUpdate:
-      maxSurge: '25%'
-      maxUnavailable: '25%'
+    rollingUpdate: { maxSurge: '25%', maxUnavailable: '25%' }
     type: 'RollingUpdate'
   template:
     metadata:
-      annotations:
-        kubectl.kubernetes.io/default-container: 'winvoice-server'
+      annotations: { kubectl.kubernetes.io/default-container: 'winvoice-server' }
       labels: *labels
       namespace: *namespace
     spec:
@@ -35,30 +32,21 @@ spec:
           image: 'winvoice-server:0.6.3'
           imagePullPolicy: 'IfNotPresent'
           resources:
-            requests:
-              cpu: '100m'
-              memory: '100Mi'
-            limits:
-              cpu: '100m'
-              memory: '100Mi'
+            requests: { cpu: '100m', memory: '100Mi' }
+            limits: { cpu: '100m', memory: '100Mi' }
 
           ports:
-            - containerPort: 3000
-              name: 'winvoice-server'
-              protocol: 'TCP'
+            - { name: 'winvoice-server', containerPort: 3000, protocol: 'TCP' }
 
           livenessProbe:
-            tcpSocket:
-              port: 3000
+            tcpSocket: { port: 3000 }
             initialDelaySeconds: 5
             timeoutSeconds: 5
             successThreshold: 1
             failureThreshold: 3
             periodSeconds: 10
           readinessProbe:
-            httpGet:
-              path: '/_status/healthy'
-              port: 3000
+            httpGet: { path: '/_status/healthy', port: 3000 }
             initialDelaySeconds: 5
             timeoutSeconds: 2
             successThreshold: 1
@@ -69,6 +57,7 @@ spec:
           args:
             - >-
               'winvoice-server
+              --log-rotation never
               --certificate /run/secrets/server/ssl/tls.cert
               --key /run/secrets/server/ssl/tls.key
               --cors-allow-origin /run/secrets/server/cors/allow.txt
@@ -80,37 +69,26 @@ spec:
               --username "$(cat /run/secrets/db/username)"
               --password "$(cat /run/secrets/db/password)"'
 
+          lifecycle:
+            postStart:
+              exec:
+                command:
+                  - 'sh'
+                  - '-c'
+                  - >-
+                    'mkdir -p "$HOME/.local/state/winvoice-server" && ln -s '
+
           volumeMounts:
-            - name: 'database-credentials'
-              mountPath: '/run/secrets/db'
-              readOnly: true
-            - name: 'server-cors'
-              mountPath: '/run/secrets/server/cors'
-              readOnly: true
-            - name: 'server-permissions'
-              mountPath: '/run/mount/server/permissions'
-              readOnly: true
-            - name: 'server-tls'
-              mountPath: '/run/secrets/server/ssl'
-              readOnly: true
-            - name: 'server-tls-cadir'
-              mountPath: '/etc/ssl/certs'
-              readOnly: true
+            - { name: 'database-credentials', mountPath: '/run/secrets/db',               readOnly: true }
+            - { name: 'server-cors',          mountPath: '/run/secrets/server/cors',      readOnly: true }
+            - { name: 'server-permissions',   mountPath: '/run/mount/server/permissions', readOnly: true }
+            - { name: 'server-tls',           mountPath: '/run/secrets/server/ssl',       readOnly: true }
+            - { name: 'server-tls-cadir',     mountPath: '/etc/ssl/certs',                readOnly: true }
 
       volumes:
-        - name: 'server-cors'
-          secret:
-            secretName: 'winvoice.backend.cors'
-        - name: 'server-permissions'
-          configMap:
-            name: 'winvoice.backend.permissions'
-        - name: 'server-tls'
-          secret:
-            secretName: 'winvoice.backend.tls'
-        - name: 'server-tls-cadir'
-          secret:
-            secretName: 'winvoice.backend.tls.cadir'
-        - name: 'database-credentials'
-          secret:
-            secretName: 'winvoice.database.login'
+        - { name: 'database-credentials', secret: { secretName: 'winvoice.database.login' } }
+        - { name: 'server-cors',          secret: { secretName: 'winvoice.backend.cors' } }
+        - { name: 'server-permissions',   configMap: { name: 'winvoice.backend.permissions' } }
+        - { name: 'server-tls',           secret: { secretName: 'winvoice.backend.tls' } }
+        - { name: 'server-tls-cadir',     secret: { secretName: 'winvoice.backend.tls.cadir' } }
 ---
