--- a/examples/integrations/kubernetes/server/deployment.yaml
+++ b/examples/integrations/kubernetes/server/deployment.yaml
@@ -69,16 +69,16 @@ spec:
               --password "$(cat /run/secrets/db/password)"'
 
           volumeMounts:
-            - { name: 'database-credentials', mountPath: '/run/secrets/db',               readOnly: true }
-            - { name: 'server-cors',          mountPath: '/run/secrets/server/cors',      readOnly: true }
-            - { name: 'server-permissions',   mountPath: '/run/mount/server/permissions', readOnly: true }
-            - { name: 'server-tls',           mountPath: '/run/secrets/server/ssl',       readOnly: true }
-            - { name: 'server-tls-cadir',     mountPath: '/etc/ssl/certs',                readOnly: true }
+            - { name: 'database.credentials', mountPath: '/run/secrets/db',               readOnly: true }
+            - { name: 'server.cors',          mountPath: '/run/secrets/server/cors',      readOnly: true }
+            - { name: 'server.permissions',   mountPath: '/run/mount/server/permissions', readOnly: true }
+            - { name: 'server.tls',           mountPath: '/run/secrets/server/ssl',       readOnly: true }
+            - { name: 'server.tls.cadir',     mountPath: '/etc/ssl/certs',                readOnly: true }
 
       volumes:
-        - { name: 'database-credentials', secret: { secretName: 'winvoice.database.login' } }
-        - { name: 'server-cors',          secret: { secretName: 'winvoice.backend.cors' } }
-        - { name: 'server-permissions',   configMap: { name: 'winvoice.backend.permissions' } }
-        - { name: 'server-tls',           secret: { secretName: 'winvoice.backend.tls' } }
-        - { name: 'server-tls-cadir',     secret: { secretName: 'winvoice.backend.tls.cadir' } }
+        - { name: 'database.credentials', secret: { secretName: 'winvoice.database.login' } }
+        - { name: 'server.cors',          secret: { secretName: 'winvoice.backend.cors' } }
+        - { name: 'server.permissions',   configMap: { name: 'winvoice.backend.permissions' } }
+        - { name: 'server.tls',           secret: { secretName: 'winvoice.backend.tls' } }
+        - { name: 'server.tls.cadir',     secret: { secretName: 'winvoice.backend.tls.cadir' } }
 ---
