build(kubernetes.server.deployment): link log file to stdout

--- a/kubernetes/server/deployment.yaml
+++ b/kubernetes/server/deployment.yaml
@@ -72,11 +72,12 @@ spec:
           lifecycle:
             postStart:
               exec:
-                command:
+                command: # link log file to stdout so that kubernetes will keep logs
                   - 'sh'
                   - '-c'
                   - >-
-                    'mkdir -p "$HOME/.local/state/winvoice-server" && ln -s '
+                    'mkdir -p "$HOME/.local/state/winvoice-server" &&
+                    ln -sf /dev/stdout "$HOME/.local/state/winvoice-server/server.log"'
 
           volumeMounts:
             - { name: 'database-credentials', mountPath: '/run/secrets/db',               readOnly: true }
