--- a/kubernetes/server/deployment.yaml
+++ b/kubernetes/server/deployment.yaml
@@ -8,7 +8,7 @@ metadata: &metadata
     app.kubernetes.io/component: 'backend'
     app.kubernetes.io/part-of: &projectName 'winvoice'
   namespace: &namespace 'example'
-  name: 'winvoice.backend'
+  name: 'winvoice-backend'
 spec:
   replicas: 3
   selector:
